# truss-optimizer

./: .gitignore  LICENSE  README.md  main.py  main_advanced.py  pratt_visualiser copy.py  pyproject.toml
docs/: theory.md  user_guide.md
examples/: 01_basic_optimization.py  02_multiple_trials.py  03_material_comparison.py  04_failure_analysis.py  05_competition_setup.py  06_custom_truss_type.py  README.md
src/truss_optimizer/: __init__.py
src/truss_optimizer/analysis/: __init__.py  reporter.py
src/truss_optimizer/core/: __init__.py  base.py  members.py  truss.py
src/truss_optimizer/materials/: __init__.py
src/truss_optimizer/optimization/: __init__.py  optimizer.py  result.py  torch_physics.py  trials.py
src/truss_optimizer/trusses/: __init__.py
src/truss_optimizer/trusses/pratt/: __init__.py  physics.py  truss.py
src/truss_optimizer/utils/: __init__.py  units.py
tests/: README.md  test_truss_optimizer.py
