[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truss-optimizer"
version = "1.0.0"
description = "Gradient-based structural optimization for truss bridges using PyTorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Jordaan", email = "165073349+ACertainArchangel@users.noreply.github.com"}
]
maintainers = [
    {name = "Gabriel Jordaan", email = "165073349+ACertainArchangel@users.noreply.github.com"}
]
keywords = [
    "structural-engineering",
    "optimization",
    "pytorch",
    "truss",
    "bridge",
    "machine-learning",
    "autodiff",
    "gradient-descent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]
all = [
    "truss-optimizer[viz,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ACertainArchangel/truss-optimizer"
Repository = "https://github.com/ACertainArchangel/truss-optimizer.git"
Issues = "https://github.com/ACertainArchangel/truss-optimizer/issues"

[project.scripts]
truss-optimize = "truss_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["truss_optimizer*"]

[tool.setuptools.package-data]
truss_optimizer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["truss_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/truss_optimizer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
